--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   
   .categories button {
     margin-right: 10px;
-    padding: 8px 16px;
+    padding: 7px 6px;
     cursor: pointer;
     background-color: #444;
     color: #f0f0f0;
@@ -38,18 +38,27 @@ body {
   }
   
   .filter-btn {
-    padding: 8px 16px;
-    background-color: #555;
-    color: white;
+    padding: 6px 12px;
+    background-color: #444;
+    color: #fff;
     border: none;
+    border-radius: 6px;
     cursor: pointer;
-    border-radius: 4px;
+    font-size: 14px;
+    font-weight: 500;
+    transition: background-color 0.3s ease, transform 0.2s ease;
   }
+  
+  .filter-btn:hover {
+    background-color: #333;
+    transform: scale(1.03);
+  }
+  
   
   .filter-menu {
     position: absolute;
-    top: 35px;
-    right: 0;
+    top: 85px;
+    left: 0;
     background: #fff;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
     display: none;
@@ -89,12 +98,17 @@ body {
     font-weight: bold;
   }
   
-  
+  .product h4, 
+.product p {
+  margin: 0;
+  padding: 0;
+  line-height: 1.5;
+}
   .product {
     background: rgba(255, 255, 255, 0.5);
     border-radius: 8px;
     padding: 12px;
-    width: 180px;
+    width: 300px;
     text-align: center;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.342);
     transition: transform 0.2s ease;
@@ -105,7 +119,7 @@ body {
   
   .product img {
     width: 100%;
-    height: 120px;
+    height: 250px;
     object-fit: cover;
     cursor: pointer;
     border-radius: 6px;
@@ -137,16 +151,19 @@ body {
     transform: translateX(-50%);
     background-color: #00722abd; /* WhatsApp green */
     color: white;
-    padding: 1px 10px;
+    padding: 6px 16px;
     border: none;
     border-radius: 50px;
     cursor: pointer;
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 16px;
+    font-weight: 600;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     display: flex;
     align-items: center;
-    gap: 5px;
+    justify-content: center;
+    gap: 8px;
+    text-align: center;
+    z-index: 1000;
   }
   
   .purchase-btn:hover {
@@ -155,11 +172,13 @@ body {
   }
   
   
+  
+  
   .cart {
     position: fixed;
     right: 0;
     top: 0;
-    width: 320px;
+    width: 250px;
     height: 100%;
     background: #fdfdfd;
     box-shadow: -2px 0 10px rgba(0, 0, 0, 0.2);
